# BioEnc

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
bioenc/: __init__.py  __init__.pyi  ml_utils.py  ml_utils.pyi
examples/: 01_basic_usage.py  02_batch_processing.py  03_ml_pipeline.py  04_variable_length_output.py  05_reading_frames.py  06_pytorch_integration.py  07_tensorflow_integration.py
src/: bindings.cpp  bioenc.hpp
tests/: test_benchmark.py  test_bioenc.py  test_ml_utils.py  test_validation.py
