[build-system]
requires = ["scikit-build-core>=0.7", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "bioenc"
version = "0.3.1"
description = "Fast k-mer tokenization for bioinformatics ML applications"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Asaf Zorea"}
]
keywords = ["bioinformatics", "kmer", "tokenization", "machine-learning", "dna", "protein", "pytorch", "tensorflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
torch = [
    "torch>=1.10",
]
tensorflow = [
    "tensorflow>=2.5",
]
ml = [
    "torch>=1.10",
    "tensorflow>=2.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.scikit-build]
wheel.packages = ["bioenc"]
cmake.build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
